--- a/index2.html
+++ b/index2.html
@@ -31,8 +31,8 @@
             </div>
 
             <div class="destination">
-                <a href="" class="right-sd"><span class="sd">D</span>bandra terminus</a>
-                <a href="" class="left-sd"><span class="sd">s</span>New delhi
+                <a href="" class="right-sd"><span class="sd">D</span>New delhi</a>
+                <a href="" class="left-sd"><span class="sd">s</span>Ludhiana 
                 </a>
             </div>
 
@@ -165,6 +165,7 @@
 
 </body>
 </html>
+
 
 
 
