Update maintc.html with new content and structure

--- a/maintc.html
+++ b/maintc.html
@@ -44,8 +44,9 @@
                 <div class="from"><span>S</span>
                     <div class="from-name">
                         
-                        <p>बांद्रा टर्मिनस</p>
-                        <p style="text-transform: uppercase;">bandra terminus</p>
+
+                        <p>बांद्रा टर्मिनस</p>
+                        <p style="text-transform: uppercase;">New Delhi</p>
                         <p>बांद्रा टर्मिनस</p>
 
                         
@@ -173,4 +174,5 @@
         setInterval(updateDate, 60000); // Update every minute
       </script>  -->
 </body>
+
 </html>
